# Vehement

./: .gitignore  AGENT_GROUP_1_INTEGRATION_GUIDE.md  ANIM.cpp  ANIM.h  ANIM_ExampleApp1.cpp  ANIM_ExampleApp1.h  AppChooser.cpp  AppChooser.h  Application.cpp  Application.h  CLAUDE.md  CMakeLists.txt  CMakeLists.txt.backup  COMPLETE_EDITOR_INTEGRATION_SUMMARY.md  COMPLETE_GI_IMPLEMENTATION_SUMMARY.md  COMPREHENSIVE_SDF_PIPELINE_IMPLEMENTATION.md  CURRENT_STATUS.md  Camera.cpp  Camera.h  Clock.cpp  Clock.h  ComplexAssesment.cpp  ComplexAssesment.h  ComplexTut1.cpp  ComplexTut1.h  ComplexTut11.cpp  ComplexTut11.h  ComplexTut11a.cpp  ComplexTut11a.h  ComplexTut1a.cpp  ComplexTut1a.h  ComplexTut2.cpp  ComplexTut2.h  ComplexTut3.cpp  ComplexTut3.h  ComplexTut4.cpp  ComplexTut4.h  ComplexTut5.cpp  ComplexTut5.h  ComplexTut6.cpp  (+154 more)
engine/platform/android/: AndroidGLES.cpp  AndroidGLES.hpp  AndroidJNI.cpp  AndroidLocation.cpp  AndroidLocation.hpp  AndroidManifest.xml.template  AndroidPlatform.cpp  AndroidPlatform.hpp  AndroidTouchInput.cpp  AndroidTouchInput.hpp  CMakeLists.txt  VulkanRenderer.cpp  VulkanRenderer.hpp
engine/platform/ios/: CMakeLists.txt  IOSAppDelegate.hpp  IOSAppDelegate.mm  IOSGLContext.hpp  IOSGLContext.mm  IOSLocation.hpp  IOSLocation.mm  IOSPlatform.hpp  IOSPlatform.mm  IOSTouchInput.hpp  IOSTouchInput.mm  Info.plist.template  MetalRenderer.hpp  MetalRenderer.mm  README.md  iOSPlatform.hpp
engine/platform/linux/: CMakeLists.txt  LinuxAudio.cpp  LinuxAudio.hpp  LinuxLocation.cpp  LinuxLocation.hpp  LinuxPlatform.cpp  LinuxPlatform.hpp  LinuxVulkan.cpp  LinuxVulkan.hpp
game/: CMakeLists.txt
game/assets/: ASSET_INVENTORY.json  CONTENT_STRUCTURE.md  vehement2
game/assets/config/: assets.json  geodata.json
game/assets/heroes/: alien_commander.json  beast_lord.json  elven_ranger.json  fairy_queen.json  human_knight.json  lich_king.json  mech_commander.json  test_gi_hero.json  warrior_hero.json  warrior_hero_v2.json  warrior_hero_v3.json
game/assets/schemas/: ability.schema.json  animation.schema.json  animation_blend_tree.schema.json  animation_clip.schema.json  animation_events.schema.json  animation_state_machine.schema.json  blend_mask.schema.json  blend_space.schema.json  blend_tree.schema.json  building.schema.json  building_archetype.schema.json  campaign.schema.json  cinematic.schema.json  common.schema.json  config_manifest.schema.json  custom_map.schema.json  dialog.schema.json  dialogue.schema.json  effect.schema.json  event_binding.schema.json  event_binding_extended.schema.json  game_mode.schema.json  hero.schema.json  loot.schema.json  master.schema.json  matchmaking.schema.json  mission.schema.json  objective.schema.json  particle.schema.json  portal.schema.json  projectile.schema.json  quest.schema.json  race_definition.schema.json  region.schema.json  replication.schema.json  sound.schema.json  spell.schema.json  talent_tree.schema.json  techtree.schema.json  tile.schema.json  (+4 more)
game/assets/scripts/: game_api.pyi
game/assets/sdf_models/: example_magic_effect.json  example_soldier_unit.json  example_tower_building.json
game/assets/shaders/: radiance3d_final.comp  radiance3d_merge.comp  radiance3d_raymarch.comp  radiance_final.comp  radiance_merge.comp  radiance_raymarch.comp
game/assets/terrain/: COLOR_PALETTE_REFERENCE.md  LANDSCAPE_IMPLEMENTATION.md  LandscapeIntegrationExample.cpp  QUICK_START_GUIDE.md  menu_landscape.json
game/docs/: ASSET_EDITING_SYSTEM.md  ASSET_PIPELINE.md  CREATE_TEMPLATE.md  EDITOR_WORLD_CREATION.md  JSON_ASSET_FORMAT.md  PROCGEN_SYSTEM.md  TEMPLATE_FORMAT.md  TEMPLATE_PROJECT_GUIDE.md
game/src/: main.cpp
game/src/assets/: PlaceholderGenerator.cpp  PlaceholderGenerator.hpp
game/src/combat/: CombatSystem.cpp  CombatSystem.hpp  Grenade.cpp  Grenade.hpp  Projectile.cpp  Projectile.hpp  Shop.cpp  Shop.hpp  Weapon.cpp  Weapon.hpp
game/src/config/: BuildingConfig.cpp  BuildingConfig.hpp  ConfigRegistry.cpp  ConfigRegistry.hpp  ConfigSchema.hpp  EntityConfig.cpp  EntityConfig.hpp  TileConfig.cpp  TileConfig.hpp  UnitConfig.cpp  UnitConfig.hpp  gameplay_performance.json
game/src/core/: Game.cpp  Game.hpp  GameConfig.cpp  GameConfig.hpp
game/src/editor/: AssetBrowser.cpp  AssetBrowser.hpp  AssetBrowserEnhanced.cpp  AssetBrowserEnhanced.hpp  ConfigEditor.cpp  ConfigEditor.hpp  Console.cpp  Console.hpp  Editor.cpp  Editor.hpp  EditorUI.cpp  EditorUI.hpp  EventBindingEditor.cpp  EventBindingEditor.hpp  Hierarchy.cpp  Hierarchy.hpp  HierarchyExtensions.hpp  HotReloadManager.cpp  HotReloadManager.hpp  Inspector.cpp  Inspector.hpp  LevelEditor.cpp  LevelEditor.hpp  LocationCrafter.cpp  LocationCrafter.hpp  LocationDebugPanel.cpp  LocationDebugPanel.hpp  NewWorldDialog.cpp  NewWorldDialog.hpp  PCGPanel.cpp  PCGPanel.hpp  ProceduralTown.cpp  ProceduralTown.hpp  PropertyInspector.cpp  PropertyInspector.hpp  ScriptEditor.cpp  ScriptEditor.hpp  TileInspector.cpp  TileInspector.hpp  TilePalette.cpp  (+9 more)
game/src/entities/: Entity.hpp  EntityManager.cpp  EntityManager.hpp  InfectionSystem.cpp  InfectionSystem.hpp  NPC.cpp  NPC.hpp  Player.cpp  Player.hpp  Zombie.cpp  Zombie.hpp
game/src/geodata/: BiomeClassifier.cpp  BiomeClassifier.hpp  BuildingFootprints.cpp  BuildingFootprints.hpp  ElevationProvider.cpp  ElevationProvider.hpp  GeoDataProvider.cpp  GeoDataProvider.hpp  (+9 more)
tests/: AssetConfigLoaderTests.cpp  CMakeLists.txt  VisualScriptingTests.cpp  test_main.cpp
tests/benchmark/: bench_animation.cpp  bench_serialization.cpp  bench_spatial.cpp
tests/engine/: test_animation.cpp  test_job_system.cpp  test_physics.cpp  test_pool.cpp  test_reflection.cpp  test_scripting.cpp  test_spatial.cpp
tests/game/: test_combat.cpp  test_config.cpp  test_entities.cpp  test_replication.cpp  test_spells.cpp  test_tech_tree.cpp
tests/graphics/: test_path_tracer.cpp  test_radiance_cascade.cpp  test_spectral_renderer.cpp
tests/integration/: test_editor_flow.cpp  test_game_loop.cpp
tests/mocks/: MockGraphics.hpp  MockServices.hpp
tests/physics/: test_rigid_body.cpp
tests/utils/: Generators.hpp  TestFixtures.hpp  TestHelpers.hpp
(+2538 files in other folders)
